--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
     "deploy": "npm run build && gh-pages -d dist"
   },
   "dependencies": {
+    "chroma-js": "^3.2.0",
+    "colord": "^2.9.3",
+    "lucide-react": "^0.263.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "lucide-react": "^0.263.1"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@types/chroma-js": "^3.1.2",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
@@ -25,10 +28,10 @@
     "eslint": "^8.45.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "gh-pages": "^5.0.0",
     "postcss": "^8.4.27",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.0.2",
-    "vite": "^4.4.5",
-    "gh-pages": "^5.0.0"
+    "vite": "^4.4.5"
   }
 }
